<resources>

    <string name="app_name">PT1000</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">PT1000 Temperatur</string>
    <string name="defaulttemp">---.--</string>
    <string name="defaultohm"></string>
    <string name="celsius">°C</string>
    <string name="ohm">Ω</string>
    <string name="setohm">----</string>
    

</resources>